Fixed the div namemodal
changed the practice.css just removed the height property which fixes the the unwanted space around

--- a/practice.css
+++ b/practice.css
@@ -158,7 +158,6 @@ h2.subtitle {
 
 .nameModal{
   background-color: antiquewhite;
-  height: 22.5%;
   width: 50%;
   text-align: center;
   border-radius: 10px;
